fixing sizing issues on smaller media and smaller font sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,3 +75,7 @@ tbody {
 .h-200 {
   height: 200px;
 }
+
+.w-20 {
+  width: 25%;
+}
